Java17 (#81)
* javax2jakarta

* remove joda

* Removal of guava

* Update to spring3, java17, remove guava etc